fix(references): add wrapping for long links

--- a/src/components/QuestionItem/question-item.module.scss
+++ b/src/components/QuestionItem/question-item.module.scss
@@ -96,6 +96,7 @@
   &__list {
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
     gap: 12px;
   }
 
